--- a/final report/finalreport_template.Rmd
+++ b/final report/finalreport_template.Rmd
@@ -8,8 +8,15 @@ output: pdf_document
 
 # Abstract
 
-
+  This report outlines the effects of alcohol consumption on students’ efficacy of learning and whether family circumstances play a role in the amount of alcohol consumed by these students. We used data from a dataset we found on Kaggle that was posted by UC Irvine. The dataset collected data on student self-reported alcohol consumption in Portuguese math class in two secondary schools, Gabriel Pereira and Moushino de Silveira during the 2005-2006 school year. 
+  
+  To focus on the effect of alcohol consumption on student learning we used the variables relating to alcohol consumption. On the other hand, to focus on the family circumstances in comparison to alcohol consumption we used the variables related to alcohol consumption. With these variables, we built regression models to decide which attributes were significant to our findings. In addition, we used proper visual models to display our findings in a visual manner. 
+  
+  Our model shows that having extra paid classes within the course subject of math plays a significant factor in whether or not one drinks more often. In addition, our data showed that increased alcohol consumption also showed an increase in the amount of failed courses. 
+  
+  
 # Introduction
+
 There are many beliefs about the prevalence of student drinking and what sort of factors impact or are indicative of high levels of drinking as well as how drinking may impact individual academic performance. For our project, we will be studying two main questions with regard to alcohol consumption.
 
 The first question is what family or external circumstances are drivers for high student alcohol consumption. Insight into these impact of these factor may allow for a better understanding for how family education, support, size, and others may be associated with binge drinking.
@@ -28,11 +35,12 @@ In order to assess the first question, we modeled a logistic regression with bin
 library(tidyverse)
 library(tidymodels)
 library(ggplot2)
-#setwd("/home/guest/R/project01")
+library(corrplot)
+setwd("/home/guest/R/project1")
 
 #working directory is different based on user, just comment out the below line if you renamed the project
 # to anything else that's not save-the-best-for-last
-setwd('/home/guest/save-the-best-for-last')
+#setwd('/home/guest/save-the-best-for-last')
 
 student <- readr::read_csv("data/student-mat.csv")
 
@@ -82,6 +90,41 @@ student_logit_fit <- logistic_reg() %>%
 
 tidy(student_logit_fit, conf.int=TRUE, exponentiate = TRUE)
 ```
+
+#Clearing Missing Data
+```{r cleaning data, echo = FALSE, message = FALSE}
+missingval <- is.na(student)
+head(missingval)
+```
+As you can see from this quick check. There are no missing values in our data. Therefore we can move on with further analysis and no clearing of variables needs to be done. I put only the head of the data because it was too long to visually see the whole thing however it is all false.
+
+#Data Wrangling
+There are two big questions that we want answered with this data set: whether a students average alcohol consumption is correlated with their family circumstances and whether alcohol consumption has an effect on student life. Lets first look at some geographics of our students and adjust our data as needed to complete a through analysis. 
+```{r geographics, echo = FALSE, message = FALSE}
+student%>%
+  ggplot(aes(x = age)) +
+  geom_boxplot()
+```
+We can see from the data that the average age of the students tested was about 17 and there was an out liar at age 22. 
+ 
+```{r tables, echo = FALSE, message = FALSE}
+table(student$age)
+table(student$school)
+table(student$ sex)
+table(student$address)
+table(student$famsize)
+table(student$Pstatus)
+table(student$Medu)
+table(student$Fedu)
+table(student$Mjob)
+table(student$reason)
+table(student$guardian)
+table(student$famsup)
+table(student$internet)
+```
+It is important to count some of the important variables in our data so we can see which variables had significant responses that need to be analyzed. 
+
+
 # Logistic Regression Analysis
 
 Upon completing the logistic regression, we found that only one variable to be significant at a p-value of 0.05, which was whether or not a student had extra tutoring or not (B8, coefficient for extra_tutoringi). However, another variable, which was B9 (coefficient for attended_nurseryi), had a p-value of 0.0682, which is very, very close. All other estimates had much higher p-values, which were not close to being significant. Furthermore, we attempted to see how changing the level of education we identified as appropriate for our binary variables on parental education, but the p-value did not shift significantly (change from 0.56/0.95 to 0.87/0.22 for mother's education and father's education respectively).
@@ -99,36 +142,67 @@ tidy(student_logit_fit, conf.int=TRUE, exponentiate = TRUE) %>%
 ```
 
 
-#Clearing Missing Data
-```{r cleaning data, echo = FALSE, message = FALSE}
-missingval <- is.na(student)
-head(missingval)
-```
-As you can see from this quick check. There are no missing values in our data. Therefore we can move on with further analysis and no clearing of variables needs to be done. I put only the head of the data because it was too long to visually see the whole thing however it is all false.
+#Linear Regression 
+How does student life impact daily alcohol consumption?
 
-#Data Wrangling
-There are two big questions that we want answered with this data set: whether a students average alcohol consumption is correlated with their family circumstances and whether alcohol consumption has an effect on student life. Lets first look at some geographics of our students.
-```{r geographics, echo = FALSE, message = FALSE}
-student%>%
-  ggplot(aes(x = age)) +
-  geom_boxplot()
-```
- We can see from the data that the average age of the students tested was about 17 and there was an out liar at age 22. 
+
+A multiple linear regression was run to understand how student life impacts alcohol consumption.  We use Dalc (daily alcohol consumption) as response variables and failures(number of past class failures ) , goout (going out with friends) , studytime (weekly study time ) , freetime (free time after school), famrel (quality of family relationships),  G1(first period grade) , G2 (second period grade), G3 ( third period grade)  and activities ( extra-curricular activities) as explanatory variables. 
+The linear regression used is the following one:
+Dalc= b0 + b1 * failures +b2*  goout + b3 * studytime +b4 *  freetime +b5 * famrel+ b6 *  activities + b7* G1 +b8* G2+ b9 * G3 
+In this regression output, only goout, studytime, freetime and famrel were significant at 0.05. 
+The result tells us that an increase in daily alcohol consumption is positively correlated (correlation coefficient= 0.27) with going out with friends. The more frequently a student goes out with friends, the more the student drinks. A one unit increase in going out with friends increases daily alcohol consumption by 0.176.In this case, we can say that going out with friends impacts student daily alcohol consumption. Additionally,  Daily alcohol consumption is negatively correlated (correlation coefficient= 0.2 ) with studytime. In other words, the more students dedicate their time to studying, the less they consume alcohol. A one unit increase in studytime decreases alcohol consumption by 0.146. In short, spending more time studying decreases daily alcohol consumption. Furthermore, daily alcohol consumption is negatively correlated(correlation coefficient= 0.08) with the quality of family relationships. The higher the quality is, the less alcohol consumption is. A one unit increase in the quality of family relationships decreases daily alcohol consumption by 0.1.  Also, Daily alcohol consumption is positively correlated with freetime (correlation coefficient=0.21 ). The more students have free time, the more they consume alcohol. A one unit increase in freetime increase alcohol consumption by 0.13
+
+#Linear regression model:
+
+Dalc= 1.28 + 0.176 * goout + 0.146 * studytime + 0.1 * famrel + 0.13 *freetime
  
-```{r tables, echo = FALSE, message = FALSE}
-table(student$age)
-table(student$school)
-table(student$ sex)
-table(student$address)
-table(student$famsize)
-table(student$Pstatus)
-table(student$Medu)
-table(student$Fedu)
-table(student$Mjob)
-table(student$reason)
-table(student$guardian)
-table(student$famsup)
-table(student$internet)
+```{r linear regression , echo = FALSE, message = FALSE }
+
+model_regression<-linear_reg()%>%
+set_engine("lm")%>%
+  fit(Dalc ~ failures + goout + studytime + freetime + famrel+ activities + G1 +G2+G3, data=student)
+print(tidy(model_regression))
+
+```
+
+#Showing relationship using correlation matrix
+ 
+ We create a new variable that shows that the average grade of the student using G1, G2, G3.
+```{r average grade, echo = FALSE, message = FALSE }
+student$avg_grade<-(student$G1 + student$G2 + student$G3)/3
+```
+ 
+Then we made a visualization of the coefficient correlation between Dalc and the other predictors. 
+
+```{r corrlation matrix, echo = FALSE, message = FALSE}
+new_student<-student%>%
+
+  select(c("Dalc","failures" , "goout", "studytime" , "freetime" ,"famrel", "avg_grade"))
+
+dalc_correlation<-cor(new_student)
+
+corrplot(dalc_correlation,method="ellipse", type = 'upper' )
+
+corrplot(dalc_correlation, method="number" , type="upper")
+
+
+```
+
+#Seocond linear model:
+
+failures= 0.11 * Dalc + 0.16
+ 
+With a p value of 0.006 less than 0.05, there is enough enough evidence to support that the true coefficient is not 0. 
+
+With this regression model, the result shows us that a one unit increase in daily alcohol consumption increases the number past failures. So, daily alcohol consumption impacts student average grade. The more students daily consume alcohol, the less , their average grade is.
+```{r alcohol consumption and failures, echo = FALSE, message = FALSE}
+
+model_dalc_failures<-linear_reg()%>%
+  set_engine("lm")%>%
+  fit(failures~Dalc, data=student)
+print(tidy(model_dalc_failures))
+
+
 ```
 
  
